--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,10 @@
 body {
   margin: 0;
-  font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-
-  background-color: white;
-  color: black;
-
-  font-size: 12px;
-  font-weight: 500;
 }
 
 code {
@@ -34,7 +26,8 @@ h2,
 h3,
 h4,
 h5,
-p {
+p,
+button {
   margin: 0;
   padding: 0;
 }
@@ -49,9 +42,4 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-section {
-  padding-top: 0;
-  padding-bottom: 60px;
 }
