--- a/src/components/Logotype/Logotype.module.css
+++ b/src/components/Logotype/Logotype.module.css
@@ -1,6 +1,10 @@
-.logoButton {
+.logo {
   margin: 0;
   padding: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   border: 0;
   background: none;
@@ -11,6 +15,7 @@
   margin-right: 12px;
   width: 24px;
   height: 24px;
+  color: white;
 }
 
 .logoTytle {
@@ -18,4 +23,5 @@
   font-weight: 500;
   font-size: 30px;
   line-height: 35px;
+  color: white;
 }
