--- a/src/components/Logotype/Logotype.module.css
+++ b/src/components/Logotype/Logotype.module.css
@@ -2,13 +2,17 @@
   margin: 0;
   padding: 0;
 
+  border: 0;
+  background: none;
+}
+
+.logoButton {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  border: 0;
-  background: none;
-  color: white;
+  border: none;
+  background-color: transparent;
 }
 
 .logoSvg {
