--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -16,3 +16,10 @@
     font-size: 16px;
   }
 }
+
+.footerLink {
+  margin-left: 5px;
+  display: inline-block;
+  text-decoration: underline;
+  color: #ff6b08;
+}
