--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,9 @@
 .container {
   margin: 0 auto;
   padding: 0 20px;
+
   width: 100%;
+  background-color: #e0dfd7;
 }
 
 @media screen and (min-width: 420px) {
