--- a/src/pages/MovieDetailsPage/MovieDetails.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetails.module.css
@@ -1,12 +1,15 @@
 .main {
   position: relative;
-  margin-top: 60px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .MainClose {
   position: absolute;
-  top: 0;
-  left: -80px;
+  top: 10px;
+  left: -60px;
 
   width: 50px;
   border: 1px solid transparent;
@@ -14,6 +17,11 @@
   text-decoration: none;
   background-color: #ff6b08;
   opacity: 0.6;
+  color: white;
+}
+
+.MainClose:hover {
+  opacity: 1;
   color: white;
 }
 
@@ -32,7 +40,7 @@
 
 .LinkContainer {
   text-align: start;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #ff6b08;
 }
 
 .Link {
@@ -44,11 +52,12 @@
   font-size: 18px;
 }
 
-.ActiveLink {
-  composes: Link;
+.Link:hover {
+  color: #ff6b08;
 }
 
-.ActiveLink:hover {
+.ActiveLink {
+  composes: Link;
   color: #ff6b08;
 }
 
@@ -72,15 +81,20 @@
   z-index: 1;
 }
 
+.Close:hover {
+  opacity: 1;
+  color: white
+}
+
 .iconClose {
   height: 30px;
   width: 30px;
 }
 
 .DetailsContainer {
-  padding-bottom: 30px;
+  padding-bottom: 60px;
   display: flex;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #ff6b08;
   margin-top: 2px;
 }
 
@@ -95,6 +109,32 @@
 
 .ButtonItems {
   display: inline-block;
+  width: 70px;
+}
+
+.ButtonItems:not(:last-child) {
+  margin-right: 20px;
+}
+
+.button {
+  padding: 5px;
+  width: 100%;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 24px;
+
+  border: none;
+  border-radius: 5px;
+  opacity: 0.6;
+  color: white;
+  background-color: #ff6b08;
+
+}
+
+.button:hover {
+  opacity: 1;
 }
 
 .GenresContainer {
