--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -156,3 +156,52 @@
   z-index: 1;
   color: white;
 }
+
+.linkContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdownToggle {
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+}
+
+.dropdownToggle {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.dropdownMenuToggle {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 10px;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  border-radius: 5px;
+  background-color: coral;
+  color: aliceblue;
+}
+
+.openButton {
+  width: 60px;
+  height: 30px;
+  border-radius: 5px;
+}
+
+.openButton:focus,
+.openButton:hover {
+  border: 1px solid transparent;
+  background-color: coral;
+  color: white;
+}
