--- a/src/views/View.module.css
+++ b/src/views/View.module.css
@@ -23,3 +23,12 @@
 .input {
   margin-top: 10px;
 }
+
+input[type='text']:focus,
+input[type='password']:focus,
+input[type='email']:focus,
+.uneditable- input:focus {
+  border-color: #ff6b08;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
