--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -158,8 +158,24 @@
 }
 
 .linkContainer {
+  margin-top: 10px;
+
+  padding-right: 30px;
   display: flex;
   flex-direction: column;
+}
+
+.authLink {
+  margin-left: 5px;
+  color: white;
+}
+
+.authLink:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.authLink:hover {
+  color: white;
 }
 
 .dropdownToggle {
@@ -194,14 +210,15 @@
 }
 
 .openButton {
-  width: 60px;
+  width: 90px;
   height: 30px;
-  border-radius: 5px;
+  border: 1px solid #ff6b08;
+  color: white;
+  background-color: transparent;
 }
 
-.openButton:focus,
 .openButton:hover {
-  border: 1px solid transparent;
-  background-color: coral;
-  color: white;
+  -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
 }
