--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -8,4 +8,15 @@
 
 .authButton {
   margin-left: 10px;
+  width: 70px;
+  height: 30px;
+  border: 1px solid #ff6b08;
+  background-color: transparent;
+  color: white;
+}
+
+.authButton:hover {
+  -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
 }
