--- a/src/views/View.module.css
+++ b/src/views/View.module.css
@@ -7,7 +7,7 @@
 }
 
 .registerForm {
-  margin-top: 20px;
+  margin-top: 4%;
   margin-left: auto;
   margin-right: auto;
 
@@ -15,9 +15,27 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 500px;
-  height: 400px;
+
+  width: 400px;
+  height: 410px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  background-color: #e0dfd7;
+}
+
+.inputName,
+.input {
+  margin-left: 20px;
+}
+
+.inpetCont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputIcon {
+  margin-right: 5px;
+  opacity: 0.7;
 }
 
 .input {
@@ -31,4 +49,32 @@ input[type='email']:focus,
   border-color: #ff6b08;
   box-shadow: none;
   -webkit-box-shadow: none;
+}
+
+.formButton {
+  width: 90px;
+  height: 40px;
+
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 17px;
+
+  border-radius: 4px;
+  border: #ff6b08;
+  color: white;
+  background-color: #ff6b08;
+}
+
+.formButton:hover {
+  background-color: #ff6b08;
+  -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+}
+
+.div {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90px;
+  height: 35px;
 }
