--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,4 +1,5 @@
-.container {
+.container,
+.secondContainer {
   margin: 0 auto;
   padding: 0 20px;
 
@@ -7,20 +8,23 @@
 }
 
 @media screen and (min-width: 420px) {
-  .container {
+  .container,
+  .secondContainer {
     max-width: 420px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .container {
+  .container,
+  .secondContainer {
     max-width: 768px;
     padding: 0 75px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .container {
+  .container,
+  .secondContainer {
     max-width: 1024px;
     padding: 0 71px;
   }
@@ -28,13 +32,6 @@
 
 /*=========================================*/
 
-.theme-switch__control {
-  display: flex;
-  align-items: center;
-  flex-shrink: 0;
-  position: relative;
-  width: 64px;
-  height: 32px;
-  border-radius: 50em;
-  padding: 3px 0;
+.secondContainer {
+  background-color: #77716d;
 }
