--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -33,5 +33,5 @@
 /*=========================================*/
 
 .secondContainer {
-  background-color: #77716d;
+  background-color: #6d6763;
 }
