--- a/src/components/ToggleSwitch/ToggleSwitch.module.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.module.css
@@ -1,5 +1,52 @@
 .label {
-  position: absolute;
+  position: fixed;
+  top: 20px;
+  left: 20px;
   z-index: 2;
-  color: white;
+  display: inline-block;
+  width: 56px;
+  height: 30px;
+  border-radius: 50em;
+}
+
+.input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  outline: 2px solid #ff6b08;
+  border-radius: 50em;
+  background-color: transparent;
+  transition: 0.4s;
+}
+
+.slider::before {
+  position: absolute;
+  content: '';
+  height: 22px;
+  width: 22px;
+  left: 4px;
+  bottom: 4px;
+
+  border-radius: 50%;
+  background-color: white;
+  transition: 0.4s;
+}
+
+.input:checked + .slider {
+  outline: 2px solid #77716d;
+}
+
+.input:checked + .slider::before {
+  transform: translateX(26px);
 }
