--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -12,7 +12,7 @@
   margin: 0 auto;
   width: 1024px;
   opacity: 0.7;
-  background-color: white;
+  background-color: rgb(24, 22, 21);
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
@@ -25,7 +25,7 @@
   align-items: center;
   width: 100%;
   max-width: 400px;
-  background-color: #fff;
+  background-color: rgb(24, 22, 21);
   border-radius: 3px;
   overflow: hidden;
 }
@@ -35,14 +35,11 @@
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.6;
+  opacity: 0.7;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
+  background-color: rgb(24, 22, 21);
 }
 
 .SearchFormButton:hover {
@@ -50,15 +47,9 @@
 }
 
 .SearchFormButtonLabel {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  clip-path: inset(50%);
-  border: 0;
+  width: 20px;
+  height: 20px;
+  color: white;
 }
 
 .SearchFormInput {
@@ -70,6 +61,8 @@
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
+  color: white;
+  background-color: rgb(24, 22, 21);
 }
 
 .SearchFormInput::placeholder {
