--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,4 +1,8 @@
 .moviesContainer {
+  padding-top: 108px;
+}
+
+.searchContainer {
   padding-top: 60px;
 }
 
@@ -57,4 +61,10 @@
 
 .cast {
   margin-top: 30px;
+}
+
+.bgEmptyIMG {
+  width: 900px;
+  height: 700px;
+  background-color: tomato;
 }
