--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -10,11 +10,36 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  width: 1024px;
   opacity: 0.7;
   background-color: rgb(24, 22, 21);
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (min-width: 280px) {
+  .Searchbar {
+    max-width: 280px;
+  }
+}
+
+@media screen and (min-width: 420px) {
+  .Searchbar {
+    max-width: 420px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .Searchbar {
+    max-width: 768px;
+    padding: 0 75px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .Searchbar {
+    max-width: 1024px;
+    padding: 0 71px;
+  }
 }
 
 /*
@@ -68,4 +93,10 @@
 .SearchFormInput::placeholder {
   font: inherit;
   font-size: 18px;
+}
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .navButton {
+    padding: 2px;
+  }
 }
