--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,7 +1,7 @@
 .authNav {
   position: absolute;
-  top: 2%;
-  right: 2%;
+  top: 20px;
+  right: 20px;
   z-index: 1;
   color: white;
 }
@@ -10,6 +10,7 @@
   margin-left: 10px;
   width: 70px;
   height: 30px;
+
   border: 1px solid #ff6b08;
   background-color: transparent;
   color: white;
@@ -19,4 +20,16 @@
   -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
   -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
   box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+}
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .authSpan {
+    display: none;
+  }
+
+  .authButton {
+    margin-left: 0;
+    width: 70px;
+    height: 30px;
+  }
 }
