--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,16 +11,6 @@
   background-color: white;
 }
 
-@media screen and (min-width: 768) {
-  .footer {
-    padding: 30px 0 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-  }
-}
-
 .footerLink {
   margin-left: 5px;
   display: inline-block;
@@ -31,4 +21,16 @@
 .footerLink:hover {
   border-bottom: 2px solid white;
   color: #ff6b08;
+}
+
+/*=========================================*/
+
+@media screen and (min-width: 768) {
+  .footer {
+    padding: 30px 0 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+  }
 }
