--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,7 +1,58 @@
+/*================ AppBar ================*/
+
 .header {
   height: 182px;
   background-color: black;
 }
+
+/*=========================================*/
+/*================ AuthNav ================*/
+
+.authNav {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+  color: white;
+}
+
+.openButton {
+  width: 90px;
+  height: 30px;
+  border: 1px solid #ff6b08;
+  color: white;
+  background-color: transparent;
+}
+
+.openButton:hover {
+  -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+  box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+}
+
+.linkContainer {
+  margin-top: 10px;
+
+  padding-right: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.authLink {
+  margin-left: 5px;
+  color: white;
+}
+
+.authLink:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.authLink:hover {
+  color: white;
+}
+
+/*=========================================*/
+/*============== Navigation ===============*/
 
 .nav {
   padding-top: 90px;
@@ -19,39 +70,6 @@
 
 .link:not(:last-child) {
   margin-right: 39px;
-}
-
-.searchContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media screen and (min-width: 280px) and (max-width: 850px) {
-  .nav {
-    padding-top: 120px;
-  }
-
-  .searchContainer {
-    margin-top: 20px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .searchContainer {
-    margin-top: 10px;
-  }
-}
-
-.serchLink {
-  position: relative;
-  z-index: 1;
-
-  width: 300px;
-}
-
-.serchLink:active {
-  color: transparent;
 }
 
 .activeLink {
@@ -73,10 +91,21 @@
   color: white;
 }
 
-@media screen and (min-width: 280px) and (max-width: 768px) {
-  .navButton {
-    padding: 2px;
-  }
+.searchContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.serchLink {
+  position: relative;
+  z-index: 1;
+
+  width: 300px;
+}
+
+.serchLink:active {
+  color: transparent;
 }
 
 .searchButton {
@@ -96,7 +125,7 @@
   border-bottom: 2px solid #ff6b08;
 }
 
-/*======================================================*/
+/*=========================================*/
 
 .homeImg {
   position: absolute;
@@ -164,36 +193,31 @@
   }
 }
 
-/*===================================================*/
+/*=========================================*/
 
-.authNav {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 1;
-  color: white;
+@media screen and (min-width: 280px) and (max-width: 850px) {
+  .nav {
+    padding-top: 120px;
+  }
+
+  .searchContainer {
+    margin-top: 20px;
+  }
 }
 
-.linkContainer {
-  margin-top: 10px;
-
-  padding-right: 30px;
-  display: flex;
-  flex-direction: column;
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .searchContainer {
+    margin-top: 10px;
+  }
 }
 
-.authLink {
-  margin-left: 5px;
-  color: white;
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .navButton {
+    padding: 2px;
+  }
 }
 
-.authLink:not(:last-child) {
-  margin-bottom: 5px;
-}
-
-.authLink:hover {
-  color: white;
-}
+/*=========================================*/
 
 .dropdownToggle {
   margin-top: 40px;
@@ -224,18 +248,4 @@
   border-radius: 5px;
   background-color: coral;
   color: aliceblue;
-}
-
-.openButton {
-  width: 90px;
-  height: 30px;
-  border: 1px solid #ff6b08;
-  color: white;
-  background-color: transparent;
-}
-
-.openButton:hover {
-  -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
-  -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
-  box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
 }
