--- a/src/views/View.module.css
+++ b/src/views/View.module.css
@@ -1,3 +1,5 @@
+/*======= LoginView == RegisterView =======*/
+
 .registerForm {
   margin-top: 90px;
   margin-left: auto;
@@ -19,30 +21,6 @@
   margin-left: 20px;
 }
 
-.inputCont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media screen and (min-width: 280px) and (max-width: 420px) {
-  .registerForm {
-    margin-top: 48px;
-    width: 100%;
-    min-height: 100vh;
-    min-height: 100%;
-  }
-
-  .form {
-    padding: 10px;
-  }
-}
-
-.inputIcon {
-  margin-right: 5px;
-  opacity: 0.7;
-}
-
 .input {
   margin-top: 10px;
 }
@@ -54,6 +32,24 @@ input[type='email']:focus,
   border-color: #ff6b08;
   box-shadow: none;
   -webkit-box-shadow: none;
+}
+
+.inputCont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputIcon {
+  margin-right: 5px;
+  opacity: 0.7;
+}
+
+.buttonContainer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90px;
+  height: 35px;
 }
 
 .formButton {
@@ -77,9 +73,17 @@ input[type='email']:focus,
   box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
 }
 
-.div {
-  margin-left: auto;
-  margin-right: auto;
-  width: 90px;
-  height: 35px;
+/*=========================================*/
+
+@media screen and (min-width: 280px) and (max-width: 420px) {
+  .registerForm {
+    margin-top: 48px;
+    width: 100%;
+    min-height: 100vh;
+    min-height: 100%;
+  }
+
+  .form {
+    padding: 10px;
+  }
 }
