--- a/src/pages/Reviews/Reviews.module.css
+++ b/src/pages/Reviews/Reviews.module.css
@@ -21,10 +21,15 @@
 
 .reviewText {
   text-align: start;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
+  line-height: 1.375;
 }
 
 .reviewText:not(:last-child) {
   margin-bottom: 20px;
+}
+
+.title {
+  margin-top: 20px;
 }
