--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -6,20 +6,46 @@
   color: white;
 }
 
+.modalButton,
 .authButton {
   margin-left: 10px;
   width: 70px;
   height: 30px;
 
+  outline: transparent;
   border: 1px solid #ff6b08;
   background-color: transparent;
   color: white;
 }
 
+.modalButton:hover,
 .authButton:hover {
   -webkit-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
   -moz-box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
   box-shadow: 0px 0px 6px 3px rgba(231, 116, 25, 0.57);
+}
+
+.modalConatiner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 300px;
+  height: 200px;
+  background-color: #e0dfd7;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.modalTitle {
+  margin-bottom: 20px;
+}
+
+.modalButton {
+  color: black;
+}
+
+.modalButton:not(:last-child) {
+  margin: 0;
 }
 
 /*=========================================*/
